2002-01-17  Darin Adler  <darin@bentspoon.com>

	* libgnomevfs/gnome-vfs-mime.h: Removed all sorts of extra
	include statements that somehow got in here.

	* libgnomevfs/gnome-vfs-mime.c:
	* modules/ftp-method.c:
	* modules/pipe-method.c:
	* modules/translate-method.c:
	* test/test-mime.c:
	Added includes as necessary to files that were depending on
	the extra includes.

Thu Jan 17 01:55:23 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: Fix open_directory with
	  NULL path and treat it just like "/".  Also a ref fix in
	  insert_entry (probably just being anal though)

2002-01-17  Anders Carlsson  <andersca@gnu.org>

	* test/test-mime.c (main): Ugh, don't try to free argv.

Fri Jan 11 02:22:26 2002  George Lebl <jirka@5z.com>

	* modules/vfolder-desktop-method.c: define structure fields for
	  monitors, start support for monitoring the desktop_dir's and
	  use .gnome2 and not .gnome for user vfolder storage

Thu Jan 10 23:17:41 2002  George Lebl <jirka@5z.com>

	* modules/file-method.c: don't do g_warning on the last 4 fam events,
	  they do come (except for FAMMoved) this was causing everything
	  to spew tons of warnings

	* modules/default-methods.conf: fix for all-applications: and add
	  all-preferences:

Thu Jan 10 11:12:24 2002  Owen Taylor  <otaylor@redhat.com>

	* libgnomevfs/Makefile.am (libgnomevfs_2_la_LIBADD): Reorder
	to get -ldl in the right place wrt. OPENSSL libs. (Probably
	irrelevant)

	* configure.in (HAVE_OPENSSL): Omit -ldl here, since we have
	it already from gmodule.

Tue Jan 08 23:28:27 2002  George Lebl <jirka@5z.com>

	* test/test-shell.c: make things run in a main loop so that we can
	  test things that require it (such as the vfolder monitoring)

	* modules/vfolder-desktop-method.c: make threadsafe (hopefully),
	  add ctime/mtime for most entries (somewhat fake for directories,
	  but good enough for noticing changes).  When we notice a change
	  there is a hack so that we read in stuff about 200ms later (this